--- a/sass/blocks/popups/_order-popup.scss
+++ b/sass/blocks/popups/_order-popup.scss
@@ -18,7 +18,7 @@
 	width: 924px;
 	background-color: #FFF;
 	border-radius: 25px;
-	background-image: url('./../../img/popups/bg.jpg');
+	background-image: url('./../img/popups/bg.jpg');
 	background-position: right;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -30,7 +30,7 @@
 		right: 44px;
 		width: 403px;
 		height: 488px;
-		background-image: url('./../../img/popups/callback.png');
+		background-image: url('./../img/popups/callback.png');
 		background-position: bottom;
 		background-size: contain;
 		background-repeat: no-repeat;
