--- a/sass/blocks/cards/_blog-card.scss
+++ b/sass/blocks/cards/_blog-card.scss
@@ -26,7 +26,9 @@
 	font-size: 16px;
 	line-height: 1.19;
 
-	&:hover {
+	&:hover,
+	&:active {
+		color: $accent-color;
 		text-decoration: underline;
 	}
 }
