--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 // Blocks
 @import "./blocks/badges";
 @import "./blocks/icons";
+@import "./blocks/brands-list";
 @import "./blocks/buttons";
 @import "./blocks/double-range";
 @import "./blocks/dropdowns";
@@ -40,6 +41,7 @@
 @import "./sections/header/header-bottom";
 @import "./sections/section-slider";
 @import "./sections/section-select";
+@import "./sections/section-select-mobile";
 @import "./sections/section-stock";
 @import "./sections/section-collections";
 @import "./sections/section-cta";
