--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -51,6 +51,20 @@ body>* {
 	&--no-padding {
 		padding: 0;
 	}
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		max-width: 768px;
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		max-width: 320px;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 }
 
 .bg-wrapper {
@@ -61,6 +75,8 @@ body>* {
 	padding-left: 15px;
 	padding-right: 15px;
 
+
+	/* Desktop small */
 	@media (max-width: 1899px) {
 		max-width: 1430px;
 
@@ -68,6 +84,30 @@ body>* {
 			width: 1400px;
 			padding-left: 35px;
 			padding-right: 35px;
+		}
+	}
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		max-width: 768px;
+		padding-left: 30px;
+		padding-right: 30px;
+
+		.container {
+			width: 708px;
+			padding-left: 35px;
+			padding-right: 35px;
+		}
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		max-width: 320px;
+
+		.container {
+			width: 290px;
+			padding-left: 15px;
+			padding-right: 15px;
 		}
 	}
 }
