--- a/sass/blocks/_titles.scss
+++ b/sass/blocks/_titles.scss
@@ -2,12 +2,23 @@
 	font-weight: 700;
 	font-size: 60px;
 	line-height: 1.17;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 36px;
+	}
 }
 
 .h2 {
 	font-weight: 700;
 	font-size: 40px;
 	line-height: 1.18;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 30px;
+		line-height: 1.17;
+	}
 }
 
 .h3 {
