--- a/sass/blocks/cards/_collection-card.scss
+++ b/sass/blocks/cards/_collection-card.scss
@@ -3,10 +3,17 @@
 	display: flex;
 	align-items: flex-end;
 	padding: 23px 28px 23px 33px;
-	width: 447px;
+	width: calc((1400px - 2 * 30px) / 3);
 	height: 317px;
 	border-radius: 25px;
 	overflow: hidden;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding: 20px;
+		width: calc((708px - 14px) / 2);
+		height: 200px;
+	}
 
 	img {
 		position: absolute;
@@ -15,6 +22,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: -1;
+		object-fit: cover;
 	}
 }
 
@@ -31,16 +39,10 @@
 	font-size: 20px;
 	line-height: 1.15;
 	color: #FFF;
-}
 
-.collection-card__button {
-	padding-left: 30px;
-	padding-right: 30px;
-	height: 40px;
-	background: $accent-color;
-	border-radius: 6px;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 40px;
-	color: #FFF;
+	/* Tablet */
+	@media (max-width: 1429px) {
+		max-width: 120px;
+		font-size: 14px;
+	}
 }
