--- a/sass/blocks/forms/_select-form.scss
+++ b/sass/blocks/forms/_select-form.scss
@@ -1,22 +1,58 @@
 .select-form {
 	width: 490px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 100%;
+	}
 }
 
 .select-form__title {
 	margin-bottom: 22px;
 }
 
-.select-form__row {
+.select-form__range {
+	margin-bottom: 20px;
+}
+
+.select-form__group {
+	display: flex;
+	flex-direction: column;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		flex-direction: row;
+		column-gap: 10px;
+	}
+}
+
+.select-form__dropdowns {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	column-gap: 15px;
+	margin-bottom: 25px;
 
-	>.dropdown {
-		width: calc(50% - 15px / 2);
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 10px;
+		width: calc((100% - 2 * 10px) / 3 * 2 + 10px);
 	}
 
-	&+.select-form__row {
-		margin-bottom: 25px;
+	>.dropdown {
+		width: calc((100% - 15px) / 2);
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: calc((100% - 10px) / 2);
+		}
+	}
+}
+
+.select-form__button {
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: calc((100% - 2 * 10px) / 3);
 	}
 }
