--- a/sass/sections/_section-collections.scss
+++ b/sass/sections/_section-collections.scss
@@ -1,10 +1,22 @@
 .section-collections {
 	padding-top: 70px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 38px;
+	}
 }
 
 .section-collections__title {
 	display: flex;
+	justify-content: flex-start;
 	align-items: center;
 	column-gap: 24px;
 	margin-bottom: 47px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		justify-content: space-between;
+		margin-bottom: 25px;
+	}
 }
