--- a/sass/sections/_section-slider.scss
+++ b/sass/sections/_section-slider.scss
@@ -5,19 +5,33 @@
 	border-radius: 25px;
 	overflow: hidden;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		min-height: 360px;
+	}
+
 	&::before {
 		content: "";
 		position: absolute;
 		right: 0;
-		top: 0;
+		top: 50%;
+		transform: translateY(-50%);
 		width: 1222px;
-		height: 100%;
+		height: 598px;
 		background-image: url("./../img/section-slider/background.png");
+		background-size: contain;
 		background-repeat: no-repeat;
 		opacity: 0.58;
 
 		@media (max-width: 1899px) {
 			right: -235px;
+		}
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			right: 0;
+			width: 526px;
+			height: 257px;
 		}
 	}
 
@@ -29,10 +43,18 @@
 		width: 1037px;
 		height: 388px;
 		background-image: url("./../img/section-slider/cars.png");
+		background-size: contain;
 		background-repeat: no-repeat;
 
 		@media (max-width: 1899px) {
 			right: calc(82px - 135px);
+		}
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: 468px;
+			height: 176px;
+			right: 14px;
 		}
 	}
 }
@@ -45,18 +67,43 @@
 	padding-top: 81px;
 	max-width: 730px;
 	z-index: 9;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 35px;
+	}
 }
 
 .section-slider__badge {
 	margin-bottom: 35px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 26px;
+	}
 }
 
 .section-slider__title {
 	margin-bottom: 24px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		max-width: 450px;
+	}
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 16px;
+	}
 }
 
 .section-slider__subtitle {
 	font-size: 29px;
 	line-height: 1.17;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 18px;
+	}
 }
