--- a/sass/blocks/cards/_review-card.scss
+++ b/sass/blocks/cards/_review-card.scss
@@ -1,5 +1,10 @@
 .review-card {
-	width: 447px;
+	width: calc((100% - 2 * 30px) / 3);
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: calc((100% - 14px) / 2);
+	}
 }
 
 .review-card__video {
@@ -9,6 +14,11 @@
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
 	overflow: hidden;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		height: 221px;
+	}
 
 	&::after {
 		content: "";
@@ -40,6 +50,11 @@
 	border-bottom-left-radius: 25px;
 	border-bottom-right-radius: 25px;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding: 25px 20px 20px;
+	}
+
 	&.active {
 		background: #FFFFFF;
 		box-shadow: 0px 0px 30px rgba(200, 200, 200, 0.5);
@@ -54,6 +69,12 @@
 	font-size: 20px;
 	line-height: 1.15;
 	text-transform: capitalize;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 10px;
+		font-size: 18px;
+	}
 }
 
 .review-card__text {
@@ -61,6 +82,11 @@
 	font-size: 16px;
 	line-height: 1.5;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 14px;
+	}
 }
 
 .review-card__readmore {
@@ -75,7 +101,7 @@
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 36px;
-	transition: background-color .2s ease-in; 
+	transition: background-color .2s ease-in;
 
 	&::after {
 		content: "";
@@ -88,14 +114,14 @@
 		transform: translateY(-50%);
 	}
 
-	&:hover{
+	&:hover {
 		background-color: #C2C2C4;
 	}
 
 	&.active {
 		background-color: #EFF0F0;
 
-		&:hover{
+		&:hover {
 			background-color: #E1E1E1;
 		}
 
