--- a/sass/blocks/_dropdowns.scss
+++ b/sass/blocks/_dropdowns.scss
@@ -32,6 +32,11 @@
 		height: 46px;
 		font-size: 16px;
 		line-height: 46px;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			font-size: 14px;
+		}
 	}
 
 	&--small {
