--- a/sass/blocks/cards/_auto-card.scss
+++ b/sass/blocks/cards/_auto-card.scss
@@ -2,7 +2,6 @@
 	position: relative;
 	padding: 25px;
 	width: calc((1400px - 2 * 30px) / 3);
-	height: 449px;
 	border: 1px solid #E1E1E1;
 	border-radius: 25px;
 	background-image: url('./../img/section-stock/background.png');
@@ -11,7 +10,10 @@
 
 	/* Tablet */
 	@media (max-width: 1429px) {
+		padding: 20px;
 		width: calc((708px - 14px) / 2);
+		background-size: 290px 171px;
+		background-position: top 61px right 0;
 	}
 
 	&::after {
@@ -23,6 +25,15 @@
 		height: 152px;
 		background-image: url('./../img/section-stock/car.png');
 		background-repeat: no-repeat;
+		background-size: contain;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			top: 100px;
+			right: 30px;
+			width: 181px;
+			height: 101px;
+		}
 	}
 }
 
@@ -37,6 +48,11 @@
 	align-items: flex-start;
 	column-gap: 20px;
 	margin-bottom: 20px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 14px;
+	}
 }
 
 .auto-card__title {
@@ -45,6 +61,12 @@
 	font-size: 27px;
 	line-height: 1.19;
 	text-transform: capitalize;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 20px;
+		line-height: 1.15;
+	}
 
 	span {
 		display: block;
@@ -55,6 +77,16 @@
 	display: flex;
 	align-items: center;
 	column-gap: 12px;
+
+	svg.icon-favourite {
+		width: 18px;
+		height: 16px;
+	}
+
+	svg.icon-compare {
+		width: 14px;
+		height: 16px;
+	}
 }
 
 .auto-card__badge-row {
@@ -63,19 +95,60 @@
 	align-items: center;
 	column-gap: 15px;
 	margin-bottom: 11px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 9px;
+		margin-bottom: 14px;
+	}
 }
 
 .auto-card__badge {
+	position: relative;
+	margin-right: 10px;
 	padding-left: 15px;
-	padding-right: 22px;
-	width: 160px;
+	width: calc(160px - 10px);
 	height: 28px;
-	background-image: url('./../img/section-stock/bg-arrow-red-small.svg');
-	background-size: contain;
-	background-repeat: no-repeat;
-	font-size: 13px;
-	line-height: 28px;
-	color: #FFF;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	background-color: $accent-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: calc(140px - 8px);
+		margin-right: 8px;
+		padding-left: 20px;
+		height: 21px;
+	}
+
+	svg {
+		position: absolute;
+		top: 0;
+		right: -10px;
+		width: 10px;
+		height: 28px;
+		fill: $accent-color;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			right: -7px;
+			width: 8px;
+			height: 21px;
+		}
+	}
+
+	span {
+		font-weight: 500;
+		font-size: 13px;
+		line-height: 28px;
+		color: #FFF;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			font-size: 11px;
+			line-height: 21px;
+		}
+	}
 }
 
 .auto-card__badge-notice {
@@ -84,10 +157,22 @@
 	font-size: 12px;
 	line-height: 1.17;
 	color: $accent-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		max-width: 60px;
+		font-size: 10px;
+		line-height: 1.2;
+	}
 }
 
 .auto-card__bonus-list {
 	margin-bottom: 20px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 15px;
+	}
 
 	li {
 		position: relative;
@@ -95,6 +180,13 @@
 		max-width: 140px;
 		font-size: 13px;
 		line-height: 1.15;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			padding-left: 25px;
+			font-size: 9px;
+			line-height: 1.22;
+		}
 
 		&::before {
 			content: "";
@@ -108,6 +200,13 @@
 			background-image: url('./../img/section-stock/gift.svg');
 			background-position: center;
 			background-repeat: no-repeat;
+
+			/* Tablet */
+			@media (max-width: 1429px) {
+				width: 20px;
+				height: 20px;
+				background-size: 10px 9px;
+			}
 		}
 
 		&:not(:last-child) {
@@ -131,11 +230,25 @@
 		font-weight: 700;
 		font-size: 22px;
 		line-height: 1.18;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			font-size: 20px;
+			line-height: 1.15;
+		}
 	}
 
 	.auto-card__loan {
 		font-size: 16px;
 		line-height: 1;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			max-width: 90px;
+			font-size: 10px;
+			line-height: 1.45;
+			text-align: right;
+		}
 	}
 }
 
@@ -147,6 +260,13 @@
 	margin-bottom: 20px;
 	font-size: 12px;
 	line-height: 1.17;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 8px;
+		line-height: 1.13;
+		margin-bottom: 16px;
+	}
 
 	li {
 		display: flex;
@@ -160,11 +280,29 @@
 		border-radius: 16px;
 		border: 1px solid rgba(194, 194, 196, 0.57);
 		line-height: 29px;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			height: 24px;
+			line-height: 22px;
+
+			img {
+				height: 11px;
+				width: auto;
+				object-fit: contain;
+			}
+		}
 	}
 }
 
 .auto-card__buttons-row {
 	position: relative;
+	padding-top: 50px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 108px;
+	}
 }
 
 .auto-card__button {
@@ -172,19 +310,33 @@
 	top: 0;
 	left: 0;
 	height: 50px;
+	border-top-left-radius: 6px;
+	border-bottom-left-radius: 6px;
 
 	&.red {
 		left: 0;
-		width: 132px;
 		z-index: 3;
+		width: calc(132px - 18px);
+		background-color: $accent-color;
+		transition: background-color .2s ease-in;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: calc(100% - 18px);
+		}
 
 		svg {
+			position: absolute;
+			right: -18px;
+			top: 0;
 			fill: $accent-color;
 			transition: fill .2s ease-in;
 		}
 
 		&:hover,
 		&:active {
+			background-color: #A90100;
+
 			svg {
 				fill: #A90100;
 			}
@@ -193,16 +345,30 @@
 
 	&.black {
 		left: 105px;
-		width: 159px;
+		width: calc(159px - 18px);
+		background-color: $black-color;
+		transition: background-color .2s ease-in;
 		z-index: 2;
 
+		/* Tablet */
+		@media (max-width: 1429px) {
+			left: 0;
+			top: 58px;
+			width: calc(158px - 18px);
+		}
+
 		svg {
+			position: absolute;
+			right: -18px;
+			top: 0;
 			fill: $black-color;
 			transition: fill .2s ease-in;
 		}
 
 		&:hover,
 		&:active {
+			background-color: #000;
+
 			svg {
 				fill: #000;
 			}
@@ -211,16 +377,31 @@
 
 	&.gray {
 		left: 231px;
-		width: 165px;
+		width: calc(165px - 18px);
+		background-color: $gray-color;
+		transition: background-color .2s ease-in;
 		z-index: 1;
 
+		/* Tablet */
+		@media (max-width: 1429px) {
+			left: unset;
+			right: 18px;
+			top: 58px;
+			width: calc(168px - 18px);
+		}
+
 		svg {
+			position: absolute;
+			right: -18px;
+			top: 0;
 			fill: $gray-color;
 			transition: fill .2s ease-in;
 		}
 
 		&:hover,
 		&:active {
+			background-color: #595D60;
+
 			svg {
 				fill: #595D60;
 			}
@@ -232,7 +413,7 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%, -50%);
+		transform: translate(calc(-50% + 9px), -50%);
 		font-weight: 700;
 		font-size: 14px;
 		line-height: 1.14;
