--- a/sass/blocks/cards/_offer-card.scss
+++ b/sass/blocks/cards/_offer-card.scss
@@ -1,11 +1,17 @@
 .offer-card {
 	position: relative;
 	padding: 29px 25px 25px;
-	width: 447px;
+	width: calc((1400px - 2 * 30px) / 3);
 	height: 196px;
 	border-radius: 25px;
 	background: #EFF0F0;
 	overflow: hidden;
+
+	@media (max-width: 1429px) {
+		padding: 20px;
+		width: calc((708px - 14px) / 2);
+		height: 130px;
+	}
 }
 
 .offer-card__background {
@@ -18,24 +24,24 @@
 	position: relative;
 	height: 100%;
 	z-index: 9;
+}
 
-	.offer-card__title {
-		margin-bottom: 4px;
-		font-weight: 700;
-		font-size: 20px;
-		line-height: 1.15;
-	}
+.offer-card__title {
+	margin-bottom: 4px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.15;
+}
 
-	.offer-card__description {
-		font-weight: 400;
-		font-size: 14px;
-		line-height: 1.14;
-		color: $gray-color;
-	}
+.offer-card__description {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.14;
+	color: $gray-color;
+}
 
-	.offer-card__button {
-		position: absolute;
-		left: 0;
-		bottom: 0;
-	}
+.offer-card__button {
+	position: absolute;
+	left: 0;
+	bottom: 0;
 }
