--- a/sass/blocks/cards/_rating-cards.scss
+++ b/sass/blocks/cards/_rating-cards.scss
@@ -3,14 +3,17 @@
 	flex-direction: column;
 	row-gap: 29px;
 	padding: 23px 22px 27px;
-	width: 327px;
+	width: calc((1400px - 3 * 30px) / 4);
 	height: 145px;
 	border-radius: 10px;
 	background: #FFFFFF;
-	box-shadow: 0px 0px 30px rgba(38, 38, 38, 0.15);
-}
+	box-shadow: 0px 0px 15px rgba(38, 38, 38, 0.15);
 
-// .rating-site-card__header {}
+	@media (max-width: 1429px) {
+		width: calc((708px - 30px) / 2);
+		height: 150px;
+	}
+}
 
 .rating-site-card__title {
 	margin-bottom: 5px;
@@ -45,14 +48,28 @@ a.rating-map-card__link {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 684px;
-	height: 145px;
+	width: calc((100% - 30px) / 2);
 	background: rgba(239, 240, 240, 0.5);
 	border-radius: 10px;
 	padding: 33px 36px 36px 54px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: unset;
+		padding: 20px;
+		width: calc((100% - 14px) / 2);
+	}
 }
 
-// .rating-map-card__header {}
+.rating-map-card__header {
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 25px;
+	}
+}
 
 .rating-map-card__logo {
 	margin-bottom: 5px;
@@ -68,6 +85,12 @@ a.rating-map-card__link {
 	display: flex;
 	align-items: center;
 	column-gap: 46px;
+	width: 100%;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		justify-content: space-between;
+	}
 }
 
 .rating-map-card__stars {
@@ -99,6 +122,15 @@ a.rating-map-card__link {
 	font-size: 43px;
 	line-height: 73px;
 	color: #FFF;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-left: 17px;
+		padding-right: 17px;
+		height: 60px;
+		font-size: 36px;
+		line-height: 60px;
+	}
 
 	&--small {
 		padding-left: 5px;
