--- a/sass/blocks/forms/_credit-calc.scss
+++ b/sass/blocks/forms/_credit-calc.scss
@@ -4,42 +4,64 @@
 	@media (max-width: 1899px) {
 		width: 875px;
 	}
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 100%;
+		padding-bottom: 43px;
+		border-bottom: 1px solid #E1E1E1;
+	}
 }
 
-.credit-calc__first-row {
+.credit-calc__dropdowns {
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
+	align-items: center;
 	margin-bottom: 25px;
 	padding: 23px;
-	height: 92px;
 	background: rgba(194, 194, 196, 0.5);
 	border-radius: 25px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 10px;
+		padding: 0;
+		background-color: transparent;
+	}
 
 	& .dropdown {
 		width: calc((100% - 36px) / 3);
 	}
 }
 
-.credit-calc__second-row {
+.credit-calc__row {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;
 	column-gap: 52px;
-	margin-bottom: 25px;
 
 	@media (max-width: 1899px) {
 		column-gap: 28px;
 	}
 }
 
-.credit-calc__img {
-	margin-bottom: 25px;
+.credit-calc__left {
 	width: 424px;
 
+	/* Desktop small */
 	@media (max-width: 1899px) {
 		width: 400px;
 	}
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 250px;
+	}
+}
+
+.credit-calc__img {
+	margin-bottom: 25px;
+	width: 100%;
 
 	img {
 		width: 100%;
@@ -49,97 +71,111 @@
 		@media (max-width: 1899px) {
 			height: 229px;
 		}
-	}
-}
 
-.credit-calc__inputs {
-	width: 446px;
-}
-
-.credit-calc__third-row {
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-end;
-	column-gap: 52px;
-
-	@media (max-width: 1899px) {
-		column-gap: 28px;
+		/* Tablet */
+		@media (max-width: 1429px) {
+			height: 139px;
+		}
 	}
 }
 
 .credit-calc__progress-bar {
-	width: 424px;
-
-	@media (max-width: 1899px) {
-		width: 400px;
-	}
-}
-
-.progress-bar {
 	width: 100%;
-}
 
-.progress-bar__values {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-bottom: 18px;
-
-	span {
-		display: inline-block;
-		width: 78px;
-		height: 23px;
-		background-color: #ADADB0;
-		border-radius: 30px;
-		font-weight: 900;
-		font-size: 16px;
-		line-height: 23px;
-		text-align: center;
-		color: #FFF;
+	.progress-bar {
+		width: 100%;
 	}
-}
 
-.progress-bar__track {
-	width: 100%;
-	height: 6px;
-	background-color: #E1E1E1;
-}
+	.progress-bar__values {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 18px;
 
-.progress-bar__labels {
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	margin-top: 10px;
-	padding-bottom: 14px;
-
-	span {
-		font-size: 16px;
-		line-height: 1.19;
-		color: #ADADB0;
-
-		&:first-child {
-			text-align-last: left;
-		}
-
-		&:last-child {
-			text-align-last: right;
+		span {
+			display: inline-block;
+			width: 78px;
+			height: 23px;
+			background-color: #ADADB0;
+			border-radius: 30px;
+			font-weight: 900;
+			font-size: 16px;
+			line-height: 23px;
+			text-align: center;
+			color: #FFF;
 		}
 	}
+
+	.progress-bar__track {
+		width: 100%;
+		height: 6px;
+		background-color: #E1E1E1;
+	}
+
+	.progress-bar__labels {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+		margin-top: 10px;
+		padding-bottom: 14px;
+
+		span {
+			font-size: 16px;
+			line-height: 1.19;
+			color: #ADADB0;
+
+			&:first-child {
+				text-align-last: left;
+			}
+
+			&:last-child {
+				text-align-last: right;
+			}
+		}
+	}
+}
+
+.credit-calc__right {
+	width: 446px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 310px;
+	}
+}
+
+.credit-calc__inputs {
+	display: flex;
+	flex-direction: column;
+	row-gap: 34px;
+	width: 100%;
+	margin-bottom: 25px;
 }
 
 .credit-calc__fee {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 446px;
+	width: 100%;
 
 	label {
 		max-width: 150px;
 		font-size: 16px;
 		line-height: 1.19;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			max-width: 119px;
+			font-size: 14px;
+		}
 	}
 
 	input {
 		width: 250px;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: 183px;
+		}
 	}
 }
