--- a/sass/blocks/forms/_credit-offer.scss
+++ b/sass/blocks/forms/_credit-offer.scss
@@ -1,11 +1,18 @@
 .credit-offer {
 	width: 447px;
 	padding: 41px 30px 78px;
-	background: #FFF;
+	background-color: #FFF;
 	border-radius: 25px;
 
 	@media (max-width: 1899px) {
 		width: 425px;
+	}
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding: 25px 0 0;
+		width: 100%;
+		background-color: transparent;
 	}
 }
 
@@ -18,17 +25,46 @@
 	span {
 		display: block;
 		color: $accent-color;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			display: inline-block;
+		}
 	}
 }
 
-.credit-offer__row+.credit-offer__row {
-	margin-top: 10px;
+.credit-offer__group {
+	display: flex;
+	flex-direction: column;
+	row-gap: 10px;
+	margin-bottom: 26px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		flex-direction: row;
+		align-items: center;
+		column-gap: 10px;
+		margin-bottom: 10px;
+
+		.input {
+			background-color: #FFF;
+		}
+
+		.button {
+			font-size: 16px;
+			line-height: 1.17;
+		}
+	}
 }
 
 .credit-offer__notice {
-	margin-top: 26px;
 	font-size: 13px;
 	line-height: 1.3;
 	text-align: center;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		text-align: left;
+	}
 }
