--- a/sass/sections/_section-cta.scss
+++ b/sass/sections/_section-cta.scss
@@ -10,6 +10,11 @@
 	min-height: 328px;
 	overflow: hidden;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding: 33px 62px 38px 300px;
+	}
+
 	&:before {
 		content: "";
 		position: absolute;
@@ -19,6 +24,15 @@
 		height: 134px;
 		background-color: $accent-color;
 		filter: blur(99.5px);
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			top: 50%;
+			left: -62px;
+			transform: translateY(-50%);
+			width: 430px;
+			height: 155px;
+		}
 	}
 
 	&:after {
@@ -30,6 +44,13 @@
 		height: 319px;
 		background-image: url('./../img/section-cta/cta.png');
 		transform: translateY(-50%);
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: 336px;
+			height: 227px;
+			background-size: 336px 227px;
+		}
 	}
 }
 
@@ -45,12 +66,23 @@
 	font-size: 30px;
 	line-height: 1.17;
 	text-transform: uppercase;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 24px;
+	}
 }
 
 .cta-form__subtitle {
 	margin-bottom: 30px;
 	font-size: 20px;
 	line-height: 1.15;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 16px;
+		line-height: 1.19;
+	}
 
 	span {
 		font-weight: 700;
@@ -64,15 +96,31 @@
 	align-items: center;
 	column-gap: 38px;
 	margin-bottom: 22px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		flex-direction: column;
+		row-gap: 10px;
+		margin-bottom: 11px;
+	}
 }
 
 .cta-form__item {
-	width: calc(50% - 38px / 2)
-}
+	width: calc(50% - 38px / 2);
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 100%;
+	}
+}
 
 .cta-form__notice {
 	font-size: 13px;
 	line-height: 1.3;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 10px;
+	}
 }
