--- a/sass/sections/_section-ratings.scss
+++ b/sass/sections/_section-ratings.scss
@@ -9,9 +9,14 @@
 .section-ratings__site-cards {
 	margin-bottom: 54px;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 20px;
+	}
+
 	.owl-carousel .owl-stage-outer {
-		margin: -20px;
-		padding: 20px;
+		margin: -15px;
+		padding: 15px;
 	}
 }
 
@@ -19,4 +24,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
+	flex-wrap: wrap;
+	row-gap: 10px;
 }
