--- a/sass/sections/footer/_footer-middle.scss
+++ b/sass/sections/footer/_footer-middle.scss
@@ -1,19 +1,34 @@
-// .footer-middle {}
-
 .footer-middle__bg {
 	padding-top: 60px;
 	padding-bottom: 70px;
 	background-color: #262626;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 30px;
+		padding-bottom: 40px;
+	}
 }
 
 .footer-middle__row {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		flex-wrap: wrap;
+		row-gap: 50px;
+	}
 }
 
 .footer-middle__catalog {
 	width: 735px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 100%;
+	}
 }
 
 .footer-middle__title {
@@ -46,8 +61,13 @@
 	font-size: 16px;
 	line-height: 2;
 	text-transform: capitalize;
-
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 20px;
+		max-height: 260px;
+	}
 
 	li {
 		display: block;
@@ -61,6 +81,11 @@
 
 .footer-middle__credit {
 	width: 210px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 42%;
+	}
 }
 
 .footer-middle__credit-menu {
@@ -78,6 +103,15 @@
 	font-size: 16px;
 	line-height: 1.19;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 58%;
+	}
+
+	.dropdown__button {
+		max-width: 250px;
+	}
 }
 
 .footer-middle__contacts-list {
