--- a/sass/sections/footer/_footer-top.scss
+++ b/sass/sections/footer/_footer-top.scss
@@ -1,5 +1,3 @@
-// .footer-top {}
-
 .footer-top__bg {
 	position: relative;
 	padding-top: 40px;
@@ -9,17 +7,33 @@
 	border-top-left-radius: 25px;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 	z-index: 0;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
 }
 
 .footer-top__menu {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	column-gap: 40px;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.19;
 	text-transform: uppercase;
 	color: #FFFFFF;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		justify-content: flex-start;
+		flex-wrap: wrap;
+		row-gap: 15px;
+		max-width: 500px;
+		font-size: 14px;
+	}
 
 	li {
 		transition: color .2s ease-in;
